feat(user): add CRUD feature
